# basilisp

./: .coveragerc  .gitattributes  .gitignore  .prospector.yaml  .readthedocs.yaml  .test_durations  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  bb.edn  lispscript.lpy  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: pypi-release.yml  run-clojure-test-suite.yml  run-tests.yml  test-pypi-release.yml
apylisp/: compiler.py  main.py  reader.py  util.py  walker.py
apylisp/lang/: atom.py  float.py  integer.py  keyword.py  list.py  map.py  namespace.py  runtime.py  set.py  string.py  symbol.py  var.py  vector.py
basilisp/: __version__.py  cli.py  compiler.py  core.lpy  importer.py  main.py  reader.py  repl.lpy  string.lpy  util.py  walker.py
basilisp/core/: __init__.lpy
basilisp/lang/: associative.py  atom.py  delay.py  keyword.py  list.py  map.py  maybe.py  meta.py  namespace.py  runtime.py  seq.py  set.py  symbol.py  typing.py  util.py  var.py  vector.py
dev-notes/: process-pool-executor-support.md
docs/: api.rst  cli.rst  compiler.rst  concepts.rst  conf.py  contributing.rst  differencesfromclojure.rst  features.rst  gettingstarted.rst  index.rst  interfaces.rst  process-pool-executor-support.md  pyinterop.rst  reader.rst  reference.rst  releasenotes.rst  repl.rst  requirements.txt  runtime.rst  specialforms.rst  testing.rst  typesandrecords.rst
docs/api/: core.rst  csv.rst  data.rst  edn.rst  io.rst  json.rst  main.rst  pprint.rst  process.rst  reflect.rst  repl.rst  set.rst  shell.rst  stacktrace.rst  string.rst  template.rst  test.rst  url.rst  walk.rst
docs/api/contrib/: bencode.rst  cli-tools.rst  nrepl-server.rst
docs/api/core/: protocols.rst
docs/api/test/: fixtures.rst
rust/: Cargo.toml
rust/src/: lib.rs  singledispatch.rs
rust/src/utils/: builtins.rs  mod.rs  mro.rs  typeref.rs  typing.rs
src/basilisp/: __version__.py  _pyast.py  cli.py  cli_tools.lpy  compiler.py  core.lpy  csv.lpy  data.lpy  edn.lpy  importer.py  io.lpy  json.lpy  lispcoverage.py  logconfig.py  logging.py  logging_config.py  main.py  pprint.lpy  process.lpy  prompt.py  reader.py  reflect.lpy  repl.lpy  set.lpy  shell.lpy  sitecustomize.py  stacktrace.lpy  string.lpy  template.lpy  test.lpy  testrunner.py  url.lpy  util.py  walk.lpy  walker.py
src/basilisp/contrib/: bencode.lpy  cli_tools.lpy  jarutil.py  lispcoverage.py  nrepl_server.lpy
src/basilisp/contrib/nrepl_server/: test.lpy
src/basilisp/contrib/pprint/: cl_format.lpy  column_writer.lpy  dispatch.lpy  pprint_base.lpy  pretty_writer.lpy  print_table.lpy  utilities.lpy
src/basilisp/contrib/pytest/: testrunner.py
src/basilisp/contrib/sphinx/: __init__.py  autodoc.py  domain.py  linkcode.py
src/basilisp/core/: __init__.lpy  protocols.lpy  template.lpy
src/basilisp/lang/: associative.py  atom.py  collection.py  compiler.py  delay.py  deref.py  exception.py  futures.py  interfaces.py  keyword.py  list.py  map.py  meta.py  multifn.py  numbers.py  obj.py  parser.py  promise.py  queue.py  reader.py  reduced.py  reference.py  runtime.py  seq.py  set.py  source.py  symbol.py  tagged.py  typing.py  util.py  vector.py  volatile.py
src/basilisp/lang/compiler/: __init__.py  analyzer.py  constants.py  exception.py  generator.py  nodes.py  optimizer.py  parser.py  utils.py
src/basilisp/lang/compyler/: __init__.py  constants.py  exception.py  generator.py  nodes.py  optimizer.py  parser.py
src/basilisp/test/: fixtures.lpy
tests/: compiler_test.py  conftest.py  core_test.py  delay_test.py  keyword_test.py  list_test.py  map_test.py  maybe_test.py  munge_test.py  namespace_test.py  reader_test.py  runtime_test.py  seq_test.py  set_test.py  string_test.py  var_test.py  vector_test.py
tests/basilisp/: atom_test.py  cli_test.py  compiler_test.py  conftest.py  core_fns_test.lpy  core_macros_test.lpy  core_test.py  defrecord_test.lpy  delay_test.py  helpers.py  importer_test.py  keyword_test.py  langutil_test.py  list_test.py  lrepr_test.py  map_test.py  maybe_test.py  multifn_test.py  munge_test.py  namespace_test.py  promise_test.py  prompt_test.py  queue_test.py  reader_test.py  runtime_test.py  seq_test.py  set_test.py  source_test.py  stacktrace_test.lpy  string_test.py  symbol_test.py  tagged_test.py  test_cli_tools.lpy  test_core_async_macros.lpy  test_core_fns.lpy  test_core_macros.lpy  test_core_reader_utility_fns.lpy  test_csv.lpy  test_data.lpy  test_data_readers.lpy  (+21 more)
tests/basilisp/contrib/: bencode_test.lpy  nrepl_server_test.lpy  test_cli_tools.lpy
tests/basilisp/contrib/pprint/: test_cl_format.lpy  test_helper.lpy  test_pretty.lpy
tests/basilisp/core/: test_arithmetic.lpy  test_arrays.lpy  test_associative_fns.lpy  test_async_macros.lpy  test_collection_fns.lpy  test_core_fns.lpy  test_core_macros.lpy  test_defrecord.lpy  test_futures.lpy  test_hierarchies.lpy  test_higher_order_fns.lpy  test_insts.lpy  test_multifn.lpy  test_namespace_fns.lpy  test_parsing_fns.lpy  test_predicates.lpy  test_printing_fns.lpy  test_protocols.lpy  test_proxies.lpy  test_random_fns.lpy  test_reader_utility_fns.lpy  test_regex_fns.lpy  test_sequence_fns.lpy  test_string_fns.lpy  test_taps.lpy  test_transducer_fns.lpy  test_transients.lpy  test_var_fns.lpy  test_volatiles.lpy
tests/basilisp/corpus/: core_load_1.lpy
